added OneClickdigital slide, took out Homework Help

--- a/Slideshow_combined.html
+++ b/Slideshow_combined.html
@@ -63,74 +63,30 @@
       </figure>
   </div>
 
-  <!-- <div class="mySlides my-fade">
+  <div class="mySlides my-fade">
       <figure class="slider">
         <figure>
-          <a href="/266/Author-Expo" style="text-decoration: none;"> -->
-            <!-- <img src="/ImageRepository/Document?documentID=326" alt=""> -->
-            <!-- <img src="images/HomepageImage_authorExpo.jpg" alt="">
+          <a href="http://washingtonmn.oneclickdigital.com/" style="text-decoration: none;">
+            <img src="/ImageRepository/Document?documentID=435" alt="">
+            <!-- <img src="images/HomepageImage_OneClickdigital_glasses.png" alt=""> -->
           <figcaption>
             <section>
-            <h4>Author Expo 2016</h4>
-            <p>Saturday, October 1, 2016 <br>
-              9:30 a.m. &ndash; 2:00 p.m. </p>
-            <p>
-              R.H. Stafford Library <br>
-              8595 Central Park Place <br>
-              Woodbury, MN </p>
+            <h4>OneClickdigital</h4>
+            <h4>Download audiobooks from our library! </h4>
+            <p>24 hours/7 days a week </p>
 
         </section>
         </figcaption></a>
         </figure>
       </figure>
-  </div> -->
-
-  <!-- <div class="mySlides my-fade">
-    <figure class="slider">
-      <figure>
-        <a href="/266/Author-Expo" style="text-decoration: none;"> -->
-          <!-- <img src="/ImageRepository/Document?documentID=407" alt=""> -->
-          <!-- <img src="images/HomepageImage_authorExpoYang.jpg" alt="">
-          <figcaption>
-            <section>
-              <h4>Author Expo 2016</h4>
-              <p>Kao Kalia Yang will discuss her new book, &ldquo;The Song Poet.&rdquo;
-              </p>
-              <p>Saturday, October 1, 2016 <br>
-                1:00 &ndash; 2:00 p.m. <br>
-                  R.H. Stafford Library
-                </p>
-
-            </section>
-          </figcaption></a>
-        </figure>
-      </figure>
-    </div> -->
+  </div>
 
   <!-- <div class="mySlides my-fade">
       <figure class="slider">
         <figure>
-          <a href="/273/A-Library-Card">
-          <img src="/ImageRepository/Document?documentID=327" alt=""> -->
-          <!-- <img src="images/HomepageImage_LibCardWeek.jpg" alt=""> -->
-          <!-- <figcaption>
-            <section>
-            <h4>September is <br>
-            Library Card Sign-up Month</h4>
-            <p>Get yours today! </p>
-          </section>
-          </figcaption>
-          </a>
-        </figure>
-      </figure>
-  </div> -->
-
-  <div class="mySlides my-fade">
-      <figure class="slider">
-        <figure>
-          <a href="http://www.brainfuse.com/highed/helpNow.asp?a_id=C1A47DFE&ss=&r=">
-          <img src="/ImageRepository/Document?documentID=331" alt="">
-          <!-- <img src="images/HomepageImage_homeworkRescue.jpg" alt=""> -->
+          <a href="http://www.brainfuse.com/highed/helpNow.asp?a_id=C1A47DFE&ss=&r="> -->
+          <!-- <img src="/ImageRepository/Document?documentID=331" alt=""> -->
+          <!-- <img src="images/HomepageImage_homeworkRescue.jpg" alt="">
           <figcaption>
             <section>
               <h4>Stuck on homework?</h4>
@@ -140,7 +96,7 @@
           </a>
         </figure>
       </figure>
-  </div>
+  </div> -->
 
   <div class="mySlides my-fade">
       <figure class="slider">
@@ -169,7 +125,7 @@
           <figcaption>
             <section>
               <h4>Hey, eBook Readers!</h4>
-              <h4>3M CloudLibrary <br>
+              <h4>3M Cloud Library <br>
                 is becoming <br>
                 cloudLibrary</h4>
 
