saved previous images as PNGs, added Great Courses slide, removed Fierce Reads

--- a/Slideshow_combined.html
+++ b/Slideshow_combined.html
@@ -41,13 +41,13 @@
       </figure>
   </div>
 
-  <div class="mySlides my-fade">
+  <!-- <div class="mySlides my-fade">
       <figure class="slider">
         <figure>
           <a href="/372/Fierce-Reads" style="text-decoration: none;">
-            <img src="/ImageRepository/Document?documentID=420" alt="">
+            <img src="/ImageRepository/Document?documentID=420" alt=""> -->
             <!-- <img src="images/HomepageImage_FierceReads.jpg" alt=""> -->
-          <figcaption>
+          <!-- <figcaption>
             <section>
             <h4>Fierce Reads</h4>
             <p>Thursday, October 6, 2016 <br>
@@ -61,13 +61,31 @@
         </figcaption></a>
         </figure>
       </figure>
+  </div> -->
+
+  <div class="mySlides my-fade">
+      <figure class="slider">
+        <figure>
+          <a href="http://washingtonmn.oneclickdigital.com/#search?search-source=quick-all&page-size=60&all=great%20courses&mediatype=eaudio" style="text-decoration: none;">
+            <img src="/ImageRepository/Document?documentID=474" alt="">
+            <!-- <img src="images/HomepageImage_FierceReads.jpg" alt=""> -->
+          <figcaption>
+            <section>
+            <h4>The Great Courses</h4>
+            <p>Available now through <br>
+            OneClickdigital</p>
+
+        </section>
+        </figcaption></a>
+        </figure>
+      </figure>
   </div>
 
   <div class="mySlides my-fade">
       <figure class="slider">
         <figure>
           <a href="http://washingtonmn.oneclickdigital.com/" style="text-decoration: none;">
-            <img src="/ImageRepository/Document?documentID=435" alt="">
+            <img src="/ImageRepository/Document?documentID=473" alt="">
             <!-- <img src="images/HomepageImage_OneClickdigital_glasses.png" alt=""> -->
           <figcaption>
             <section>
@@ -120,7 +138,7 @@
       <figure class="slider">
         <figure>
           <a href="https://ebook.yourcloudlibrary.com/library/WashingtonCountyLibrary/Featured">
-          <img src="/ImageRepository/Document?documentID=432" alt="">
+          <img src="/ImageRepository/Document?documentID=472" alt="">
           <!-- <img src="images/HomepageImage_3McloudLibrary.jpg" alt=""> -->
           <figcaption>
             <section>
