added ClubBook slide along with an archive file to move out old slides

--- a/Slideshow_combined.html
+++ b/Slideshow_combined.html
@@ -2,23 +2,6 @@
 
 <div class="w3-content w3-display-container">
 
-<!-- Girl with salamander slide  -->
-  <!-- <div class="mySlides my-fade">
-      <figure class="slider">
-        <figure>
-          <img src="/ImageRepository/Document?documentID=325" alt="">
-          <img src="images/HomepageImage_girlSalamander.jpg" alt="">
-          <figcaption>
-            <section>
-              <h4>Inspire Curiosity. </h4>
-              <h4>Champion Innovation. </h4>
-              <h4>Spark Opportunity. </h4>
-            </section>
-          </figcaption>
-        </figure>
-      </figure>
-  </div> -->
-
   <div class="mySlides my-fade">
       <figure class="slider">
         <figure>
@@ -41,17 +24,17 @@
       </figure>
   </div>
 
-  <!-- <div class="mySlides my-fade">
+  <div class="mySlides my-fade">
       <figure class="slider">
         <figure>
-          <a href="/372/Fierce-Reads" style="text-decoration: none;">
-            <img src="/ImageRepository/Document?documentID=420" alt=""> -->
-            <!-- <img src="images/HomepageImage_FierceReads.jpg" alt=""> -->
-          <!-- <figcaption>
+          <a href="http://clubbook.org/?portfolio=sy-montgomery" style="text-decoration: none;">
+            <img src="/ImageRepository/Document?documentID=478" alt="">
+            <!-- <img src="images/HomepageImage_MakerFest.jpg" alt=""> -->
+          <figcaption>
             <section>
-            <h4>Fierce Reads</h4>
-            <p>Thursday, October 6, 2016 <br>
-              6:00 p.m. </p>
+            <h4>Sy Montgomery</h4>
+            <p>Wednesday, November 2<br>
+              6:30 p.m. </p>
             <p>
               R.H. Stafford Library <br>
               8595 Central Park Place <br>
@@ -61,7 +44,7 @@
         </figcaption></a>
         </figure>
       </figure>
-  </div> -->
+  </div>
 
   <div class="mySlides my-fade">
       <figure class="slider">
@@ -98,23 +81,6 @@
         </figure>
       </figure>
   </div>
-
-  <!-- <div class="mySlides my-fade">
-      <figure class="slider">
-        <figure>
-          <a href="http://www.brainfuse.com/highed/helpNow.asp?a_id=C1A47DFE&ss=&r="> -->
-          <!-- <img src="/ImageRepository/Document?documentID=331" alt=""> -->
-          <!-- <img src="images/HomepageImage_homeworkRescue.jpg" alt="">
-          <figcaption>
-            <section>
-              <h4>Stuck on homework?</h4>
-            <p>All you need is your library card to get free online homework help</p>
-            </section>
-          </figcaption>
-          </a>
-        </figure>
-      </figure>
-  </div> -->
 
   <div class="mySlides my-fade">
       <figure class="slider">
@@ -164,8 +130,8 @@
     <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(3)"></span>
     <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(4)"></span>
     <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(5)"></span>
-    <!-- <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(6)"></span>
-    <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(7)"></span> -->
+    <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(6)"></span>
+    <!-- <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(7)"></span> -->
 
   </div>
 
