added Kinship slide, took off MnLink

--- a/Slideshow_archive.html
+++ b/Slideshow_archive.html
@@ -153,3 +153,21 @@
         </figure>
       </figure>
   </div>
+
+  <div class="mySlides my-fade">
+      <figure class="slider">
+        <figure>
+          <a href="/DocumentCenter/View/404">
+          <img src="/ImageRepository/Document?documentID=406" alt="">
+          <!-- <img src="images/HomepageImage_MnLink.jpg" alt=""> -->
+          <figcaption>
+            <section>
+              <h4>New &amp; improved search</h4>
+              <h4>Easy access from any device</h4>
+
+            </section>
+          </figcaption>
+          </a>
+        </figure>
+      </figure>
+  </div>
