--- a/Slideshow_archive.html
+++ b/Slideshow_archive.html
@@ -171,3 +171,25 @@
         </figure>
       </figure>
   </div>
+
+  <div class="mySlides my-fade">
+    <figure class="slider">
+      <figure>
+        <a href="/265/Maker-Fest" style="text-decoration: none;">
+          <img src="/ImageRepository/Document?documentID=423" alt="">
+          <!-- <img src="images/HomepageImage_MakerFest.jpg" alt=""> -->
+          <figcaption>
+            <section>
+              <h4>Maker Fest 2016</h4>
+              <p>Saturday, October 22, 2016 <br>
+                10:00 a.m. &ndash; 2:00 p.m. </p>
+                <p>
+                  R.H. Stafford Library <br>
+                  8595 Central Park Place <br>
+                  Woodbury, MN </p>
+
+                </section>
+              </figcaption></a>
+            </figure>
+          </figure>
+        </div>
