--- a/Slideshow_combined.html
+++ b/Slideshow_combined.html
@@ -2,28 +2,6 @@
 
 <div class="w3-content w3-display-container">
 
-  <div class="mySlides my-fade">
-    <figure class="slider">
-      <figure>
-        <a href="/265/Maker-Fest" style="text-decoration: none;">
-          <img src="/ImageRepository/Document?documentID=423" alt="">
-          <!-- <img src="images/HomepageImage_MakerFest.jpg" alt=""> -->
-          <figcaption>
-            <section>
-              <h4>Maker Fest 2016</h4>
-              <p>Saturday, October 22, 2016 <br>
-                10:00 a.m. &ndash; 2:00 p.m. </p>
-                <p>
-                  R.H. Stafford Library <br>
-                  8595 Central Park Place <br>
-                  Woodbury, MN </p>
-
-                </section>
-              </figcaption></a>
-            </figure>
-          </figure>
-        </div>
-
         <div class="mySlides my-fade">
           <figure class="slider">
             <figure>
@@ -136,7 +114,7 @@
                           <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(3)"></span>
                           <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(4)"></span>
                           <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(5)"></span>
-                          <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(6)"></span>
+                          <!-- <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(6)"></span> -->
                           <!-- <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(7)"></span> -->
 
                         </div>
