archived Kinship Law Lib slide

--- a/Slideshow_archive.html
+++ b/Slideshow_archive.html
@@ -193,3 +193,27 @@
             </figure>
           </figure>
         </div>
+
+        <div class="mySlides my-fade">
+          <figure class="slider">
+            <figure>
+              <a href="/385/3224/Kinship-Caregiver-Session">
+                <img src="/ImageRepository/Document?documentID=481" alt="">
+                <!-- <img src="images/HomepageImage_MnLink.jpg" alt=""> -->
+                <figcaption>
+                  <section>
+                    <h4>Kinship Caregiving Resources</h4>
+                    <p style="line-height: 1.1em;">Monday, October 24<br>
+                      1:00 - 2:30 p.m.<br>
+                        Washington County Government Center <br>
+                        Room LL16 <br>
+                        14949 62nd St. N. <br>
+                        Stillwater, MN <br>
+                      </p>
+
+                    </section>
+                  </figcaption>
+                </a>
+              </figure>
+            </figure>
+          </div>
