--- a/Slideshow_combined.html
+++ b/Slideshow_combined.html
@@ -60,30 +60,6 @@
                       </figure>
                     </div>
 
-                    <div class="mySlides my-fade">
-                      <figure class="slider">
-                        <figure>
-                          <a href="/385/3224/Kinship-Caregiver-Session">
-                            <img src="/ImageRepository/Document?documentID=481" alt="">
-                            <!-- <img src="images/HomepageImage_MnLink.jpg" alt=""> -->
-                            <figcaption>
-                              <section>
-                                <h4>Kinship Caregiving Resources</h4>
-                                <p style="line-height: 1.1em;">Monday, October 24<br>
-                                  1:00 - 2:30 p.m.<br>
-                                    Washington County Government Center <br>
-                                    Room LL16 <br>
-                                    14949 62nd St. N. <br>
-                                    Stillwater, MN <br>
-                                  </p>
-
-                                </section>
-                              </figcaption>
-                            </a>
-                          </figure>
-                        </figure>
-                      </div>
-
                       <div class="mySlides my-fade">
                         <figure class="slider">
                           <figure>
@@ -113,7 +89,7 @@
                           <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(2)"></span>
                           <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(3)"></span>
                           <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(4)"></span>
-                          <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(5)"></span>
+                          <!-- <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(5)"></span> -->
                           <!-- <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(6)"></span> -->
                           <!-- <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(7)"></span> -->
 
