remove Sy Mont. slide

--- a/Slideshow_archive.html
+++ b/Slideshow_archive.html
@@ -217,3 +217,25 @@
               </figure>
             </figure>
           </div>
+
+          <div class="mySlides my-fade">
+            <figure class="slider">
+              <figure>
+                <a href="http://clubbook.org/?portfolio=sy-montgomery" style="text-decoration: none;">
+                  <img src="/ImageRepository/Document?documentID=478" alt="">
+                  <!-- <img src="images/HomepageImage_MakerFest.jpg" alt=""> -->
+                  <figcaption>
+                    <section>
+                      <h4>Sy Montgomery</h4>
+                      <p>Wednesday, November 2<br>
+                        6:30 p.m. </p>
+                        <p>
+                          R.H. Stafford Library <br>
+                          8595 Central Park Place <br>
+                          Woodbury, MN </p>
+
+                        </section>
+                      </figcaption></a>
+                    </figure>
+                  </figure>
+                </div>
