added Picture Book Month slide, archived cloudLibrary

--- a/Slideshow_archive.html
+++ b/Slideshow_archive.html
@@ -3,239 +3,258 @@
 
 
 <!-- Girl with salamander slide  -->
-  <div class="mySlides my-fade">
-      <figure class="slider">
-        <figure>
-          <img src="/ImageRepository/Document?documentID=325" alt="">
-          <!-- <img src="images/HomepageImage_girlSalamander.jpg" alt=""> -->
-          <figcaption>
-            <section>
-              <h4>Inspire Curiosity. </h4>
-              <h4>Champion Innovation. </h4>
-              <h4>Spark Opportunity. </h4>
-            </section>
-          </figcaption>
-        </figure>
-      </figure>
-  </div>
+<div class="mySlides my-fade">
+  <figure class="slider">
+    <figure>
+      <img src="/ImageRepository/Document?documentID=325" alt="">
+      <!-- <img src="images/HomepageImage_girlSalamander.jpg" alt=""> -->
+      <figcaption>
+        <section>
+          <h4>Inspire Curiosity. </h4>
+          <h4>Champion Innovation. </h4>
+          <h4>Spark Opportunity. </h4>
+        </section>
+      </figcaption>
+    </figure>
+  </figure>
+</div>
 
-  <div class="mySlides my-fade">
-      <figure class="slider">
-        <figure>
-          <a href="/265/Maker-Fest" style="text-decoration: none;">
-            <img src="/ImageRepository/Document?documentID=423" alt="">
-            <!-- <img src="images/HomepageImage_MakerFest.jpg" alt=""> -->
-          <figcaption>
-            <section>
+<div class="mySlides my-fade">
+  <figure class="slider">
+    <figure>
+      <a href="/265/Maker-Fest" style="text-decoration: none;">
+        <img src="/ImageRepository/Document?documentID=423" alt="">
+        <!-- <img src="images/HomepageImage_MakerFest.jpg" alt=""> -->
+        <figcaption>
+          <section>
             <h4>Maker Fest 2016</h4>
             <p>Saturday, October 22, 2016 <br>
               10:00 a.m. &ndash; 2:00 p.m. </p>
-            <p>
-              R.H. Stafford Library <br>
-              8595 Central Park Place <br>
-              Woodbury, MN </p>
+              <p>
+                R.H. Stafford Library <br>
+                8595 Central Park Place <br>
+                Woodbury, MN </p>
 
-        </section>
-        </figcaption></a>
-        </figure>
-      </figure>
-  </div>
-
-  <div class="mySlides my-fade">
-      <figure class="slider">
-        <figure>
-          <a href="/372/Fierce-Reads" style="text-decoration: none;">
-            <img src="/ImageRepository/Document?documentID=420" alt="">
-            <!-- <img src="images/HomepageImage_FierceReads.jpg" alt=""> -->
-          <figcaption>
-            <section>
-            <h4>Fierce Reads</h4>
-            <p>Thursday, October 6, 2016 <br>
-              6:00 p.m. </p>
-            <p>
-              R.H. Stafford Library <br>
-              8595 Central Park Place <br>
-              Woodbury, MN </p>
-
-        </section>
-        </figcaption></a>
-        </figure>
-      </figure>
-  </div>
-
-  <div class="mySlides my-fade">
-      <figure class="slider">
-        <figure>
-          <a href="http://washingtonmn.oneclickdigital.com/#search?search-source=quick-all&page-size=60&all=great%20courses&mediatype=eaudio" style="text-decoration: none;">
-            <img src="/ImageRepository/Document?documentID=475" alt="">
-            <!-- <img src="images/HomepageImage_FierceReads.jpg" alt=""> -->
-          <figcaption>
-            <section>
-            <h4>The Great Courses</h4>
-            <p>Available now through <br>
-            OneClickdigital</p>
-
-        </section>
-        </figcaption></a>
-        </figure>
-      </figure>
-  </div>
-
-  <div class="mySlides my-fade">
-      <figure class="slider">
-        <figure>
-          <a href="http://washingtonmn.oneclickdigital.com/" style="text-decoration: none;">
-            <img src="/ImageRepository/Document?documentID=473" alt="">
-            <!-- <img src="images/HomepageImage_OneClickdigital_glasses.png" alt=""> -->
-          <figcaption>
-            <section>
-            <h4>OneClickdigital</h4>
-            <h4>Download audiobooks from our library! </h4>
-            <p>24 hours/7 days a week </p>
-
-        </section>
-        </figcaption></a>
-        </figure>
-      </figure>
-  </div>
-
-  <div class="mySlides my-fade">
-      <figure class="slider">
-        <figure>
-          <a href="http://www.brainfuse.com/highed/helpNow.asp?a_id=C1A47DFE&ss=&r=">
-          <!-- <img src="/ImageRepository/Document?documentID=331" alt=""> -->
-          <img src="images/HomepageImage_homeworkRescue.jpg" alt="">
-          <figcaption>
-            <section>
-              <h4>Stuck on homework?</h4>
-            <p>All you need is your library card to get free online homework help</p>
-            </section>
-          </figcaption>
-          </a>
-        </figure>
-      </figure>
-  </div>
-
-  <div class="mySlides my-fade">
-      <figure class="slider">
-        <figure>
-          <a href="/DocumentCenter/View/404">
-          <img src="/ImageRepository/Document?documentID=406" alt="">
-          <!-- <img src="images/HomepageImage_MnLink.jpg" alt=""> -->
-          <figcaption>
-            <section>
-              <h4>New &amp; improved search</h4>
-              <h4>Easy access from any device</h4>
-
-            </section>
-          </figcaption>
-          </a>
-        </figure>
-      </figure>
-  </div>
-
-  <div class="mySlides my-fade">
-      <figure class="slider">
-        <figure>
-          <a href="https://ebook.yourcloudlibrary.com/library/WashingtonCountyLibrary/Featured">
-          <img src="/ImageRepository/Document?documentID=472" alt="">
-          <!-- <img src="images/HomepageImage_3McloudLibrary.jpg" alt=""> -->
-          <figcaption>
-            <section>
-              <h4>Hey, eBook Readers!</h4>
-              <h4>3M Cloud Library <br>
-                is becoming <br>
-                cloudLibrary</h4>
-
-            </section>
-          </figcaption>
-          </a>
-        </figure>
-      </figure>
-  </div>
-
-  <div class="mySlides my-fade">
-      <figure class="slider">
-        <figure>
-          <a href="/DocumentCenter/View/404">
-          <img src="/ImageRepository/Document?documentID=406" alt="">
-          <!-- <img src="images/HomepageImage_MnLink.jpg" alt=""> -->
-          <figcaption>
-            <section>
-              <h4>New &amp; improved search</h4>
-              <h4>Easy access from any device</h4>
-
-            </section>
-          </figcaption>
-          </a>
-        </figure>
-      </figure>
-  </div>
-
-  <div class="mySlides my-fade">
-    <figure class="slider">
-      <figure>
-        <a href="/265/Maker-Fest" style="text-decoration: none;">
-          <img src="/ImageRepository/Document?documentID=423" alt="">
-          <!-- <img src="images/HomepageImage_MakerFest.jpg" alt=""> -->
-          <figcaption>
-            <section>
-              <h4>Maker Fest 2016</h4>
-              <p>Saturday, October 22, 2016 <br>
-                10:00 a.m. &ndash; 2:00 p.m. </p>
-                <p>
-                  R.H. Stafford Library <br>
-                  8595 Central Park Place <br>
-                  Woodbury, MN </p>
-
-                </section>
-              </figcaption></a>
-            </figure>
+              </section>
+            </figcaption></a>
           </figure>
-        </div>
+        </figure>
+      </div>
 
-        <div class="mySlides my-fade">
-          <figure class="slider">
-            <figure>
-              <a href="/385/3224/Kinship-Caregiver-Session">
-                <img src="/ImageRepository/Document?documentID=481" alt="">
-                <!-- <img src="images/HomepageImage_MnLink.jpg" alt=""> -->
-                <figcaption>
-                  <section>
-                    <h4>Kinship Caregiving Resources</h4>
-                    <p style="line-height: 1.1em;">Monday, October 24<br>
-                      1:00 - 2:30 p.m.<br>
-                        Washington County Government Center <br>
-                        Room LL16 <br>
-                        14949 62nd St. N. <br>
-                        Stillwater, MN <br>
-                      </p>
+      <div class="mySlides my-fade">
+        <figure class="slider">
+          <figure>
+            <a href="/372/Fierce-Reads" style="text-decoration: none;">
+              <img src="/ImageRepository/Document?documentID=420" alt="">
+              <!-- <img src="images/HomepageImage_FierceReads.jpg" alt=""> -->
+              <figcaption>
+                <section>
+                  <h4>Fierce Reads</h4>
+                  <p>Thursday, October 6, 2016 <br>
+                    6:00 p.m. </p>
+                    <p>
+                      R.H. Stafford Library <br>
+                      8595 Central Park Place <br>
+                      Woodbury, MN </p>
 
                     </section>
-                  </figcaption>
-                </a>
+                  </figcaption></a>
+                </figure>
               </figure>
-            </figure>
-          </div>
+            </div>
 
-          <div class="mySlides my-fade">
-            <figure class="slider">
-              <figure>
-                <a href="http://clubbook.org/?portfolio=sy-montgomery" style="text-decoration: none;">
-                  <img src="/ImageRepository/Document?documentID=478" alt="">
-                  <!-- <img src="images/HomepageImage_MakerFest.jpg" alt=""> -->
-                  <figcaption>
-                    <section>
-                      <h4>Sy Montgomery</h4>
-                      <p>Wednesday, November 2<br>
-                        6:30 p.m. </p>
-                        <p>
-                          R.H. Stafford Library <br>
-                          8595 Central Park Place <br>
-                          Woodbury, MN </p>
+            <div class="mySlides my-fade">
+              <figure class="slider">
+                <figure>
+                  <a href="http://washingtonmn.oneclickdigital.com/#search?search-source=quick-all&page-size=60&all=great%20courses&mediatype=eaudio" style="text-decoration: none;">
+                    <img src="/ImageRepository/Document?documentID=475" alt="">
+                    <!-- <img src="images/HomepageImage_FierceReads.jpg" alt=""> -->
+                    <figcaption>
+                      <section>
+                        <h4>The Great Courses</h4>
+                        <p>Available now through <br>
+                          OneClickdigital</p>
 
                         </section>
                       </figcaption></a>
                     </figure>
                   </figure>
                 </div>
+
+                <div class="mySlides my-fade">
+                  <figure class="slider">
+                    <figure>
+                      <a href="http://washingtonmn.oneclickdigital.com/" style="text-decoration: none;">
+                        <img src="/ImageRepository/Document?documentID=473" alt="">
+                        <!-- <img src="images/HomepageImage_OneClickdigital_glasses.png" alt=""> -->
+                        <figcaption>
+                          <section>
+                            <h4>OneClickdigital</h4>
+                            <h4>Download audiobooks from our library! </h4>
+                            <p>24 hours/7 days a week </p>
+
+                          </section>
+                        </figcaption></a>
+                      </figure>
+                    </figure>
+                  </div>
+
+                  <div class="mySlides my-fade">
+                    <figure class="slider">
+                      <figure>
+                        <a href="http://www.brainfuse.com/highed/helpNow.asp?a_id=C1A47DFE&ss=&r=">
+                          <!-- <img src="/ImageRepository/Document?documentID=331" alt=""> -->
+                          <img src="images/HomepageImage_homeworkRescue.jpg" alt="">
+                          <figcaption>
+                            <section>
+                              <h4>Stuck on homework?</h4>
+                              <p>All you need is your library card to get free online homework help</p>
+                            </section>
+                          </figcaption>
+                        </a>
+                      </figure>
+                    </figure>
+                  </div>
+
+                  <div class="mySlides my-fade">
+                    <figure class="slider">
+                      <figure>
+                        <a href="/DocumentCenter/View/404">
+                          <img src="/ImageRepository/Document?documentID=406" alt="">
+                          <!-- <img src="images/HomepageImage_MnLink.jpg" alt=""> -->
+                          <figcaption>
+                            <section>
+                              <h4>New &amp; improved search</h4>
+                              <h4>Easy access from any device</h4>
+
+                            </section>
+                          </figcaption>
+                        </a>
+                      </figure>
+                    </figure>
+                  </div>
+
+                  <div class="mySlides my-fade">
+                    <figure class="slider">
+                      <figure>
+                        <a href="https://ebook.yourcloudlibrary.com/library/WashingtonCountyLibrary/Featured">
+                          <img src="/ImageRepository/Document?documentID=472" alt="">
+                          <!-- <img src="images/HomepageImage_3McloudLibrary.jpg" alt=""> -->
+                          <figcaption>
+                            <section>
+                              <h4>Hey, eBook Readers!</h4>
+                              <h4>3M Cloud Library <br>
+                                is becoming <br>
+                                cloudLibrary</h4>
+
+                              </section>
+                            </figcaption>
+                          </a>
+                        </figure>
+                      </figure>
+                    </div>
+
+                    <div class="mySlides my-fade">
+                      <figure class="slider">
+                        <figure>
+                          <a href="/DocumentCenter/View/404">
+                            <img src="/ImageRepository/Document?documentID=406" alt="">
+                            <!-- <img src="images/HomepageImage_MnLink.jpg" alt=""> -->
+                            <figcaption>
+                              <section>
+                                <h4>New &amp; improved search</h4>
+                                <h4>Easy access from any device</h4>
+
+                              </section>
+                            </figcaption>
+                          </a>
+                        </figure>
+                      </figure>
+                    </div>
+
+                    <div class="mySlides my-fade">
+                      <figure class="slider">
+                        <figure>
+                          <a href="/265/Maker-Fest" style="text-decoration: none;">
+                            <img src="/ImageRepository/Document?documentID=423" alt="">
+                            <!-- <img src="images/HomepageImage_MakerFest.jpg" alt=""> -->
+                            <figcaption>
+                              <section>
+                                <h4>Maker Fest 2016</h4>
+                                <p>Saturday, October 22, 2016 <br>
+                                  10:00 a.m. &ndash; 2:00 p.m. </p>
+                                  <p>
+                                    R.H. Stafford Library <br>
+                                    8595 Central Park Place <br>
+                                    Woodbury, MN </p>
+
+                                  </section>
+                                </figcaption></a>
+                              </figure>
+                            </figure>
+                          </div>
+
+                          <div class="mySlides my-fade">
+                            <figure class="slider">
+                              <figure>
+                                <a href="/385/3224/Kinship-Caregiver-Session">
+                                  <img src="/ImageRepository/Document?documentID=481" alt="">
+                                  <!-- <img src="images/HomepageImage_MnLink.jpg" alt=""> -->
+                                  <figcaption>
+                                    <section>
+                                      <h4>Kinship Caregiving Resources</h4>
+                                      <p style="line-height: 1.1em;">Monday, October 24<br>
+                                        1:00 - 2:30 p.m.<br>
+                                        Washington County Government Center <br>
+                                        Room LL16 <br>
+                                        14949 62nd St. N. <br>
+                                        Stillwater, MN <br>
+                                      </p>
+
+                                    </section>
+                                  </figcaption>
+                                </a>
+                              </figure>
+                            </figure>
+                          </div>
+
+                          <div class="mySlides my-fade">
+                            <figure class="slider">
+                              <figure>
+                                <a href="http://clubbook.org/?portfolio=sy-montgomery" style="text-decoration: none;">
+                                  <img src="/ImageRepository/Document?documentID=478" alt="">
+                                  <!-- <img src="images/HomepageImage_MakerFest.jpg" alt=""> -->
+                                  <figcaption>
+                                    <section>
+                                      <h4>Sy Montgomery</h4>
+                                      <p>Wednesday, November 2<br>
+                                        6:30 p.m. </p>
+                                        <p>
+                                          R.H. Stafford Library <br>
+                                          8595 Central Park Place <br>
+                                          Woodbury, MN </p>
+
+                                        </section>
+                                      </figcaption></a>
+                                    </figure>
+                                  </figure>
+                                </div>
+
+                                <div class="w3-content w3-display-container">
+
+                                  <div class="mySlides my-fade">
+                                    <figure class="slider">
+                                      <figure>
+                                        <a href="https://smartpass.melsa.org/" style="text-decoration: none;">
+                                          <img src="/ImageRepository/Document?documentID=484" alt="">
+                                          <!-- <img src="images/HomepageImage_FierceReads.jpg" alt=""> -->
+                                          <figcaption>
+                                            <section>
+                                              <h4>Welcome to smARTpass! </h4>
+                                              <p>Use your library card to get free tickets to shows and museums</p>
+
+                                            </section>
+                                          </figcaption></a>
+                                        </figure>
+                                      </figure>
+                                    </div>
