--- a/Slideshow_combined.html
+++ b/Slideshow_combined.html
@@ -22,6 +22,24 @@
       <div class="mySlides my-fade">
         <figure class="slider">
           <figure>
+            <a href="https://www.washcolib.org/321/New-Picture-Books">
+              <img src="/ImageRepository/Document?documentID=489" alt="">
+              <!-- <img src="images/HomepageImage_3McloudLibrary.jpg" alt=""> -->
+              <figcaption>
+                <section>
+                  <h4>Happy Picture Book Month</h4>
+                  <p>Celebrate by checking out a new picture book today!</p>
+
+                  </section>
+                </figcaption>
+              </a>
+            </figure>
+          </figure>
+        </div>
+
+      <div class="mySlides my-fade">
+        <figure class="slider">
+          <figure>
             <a href="http://washingtonmn.oneclickdigital.com/#search?search-source=quick-all&page-size=60&all=great%20courses&mediatype=eaudio" style="text-decoration: none;">
               <img src="/ImageRepository/Document?documentID=475" alt="">
               <!-- <img src="images/HomepageImage_FierceReads.jpg" alt=""> -->
@@ -55,25 +73,6 @@
               </figure>
             </div>
 
-            <div class="mySlides my-fade">
-              <figure class="slider">
-                <figure>
-                  <a href="https://ebook.yourcloudlibrary.com/library/WashingtonCountyLibrary/Featured">
-                    <img src="/ImageRepository/Document?documentID=472" alt="">
-                    <!-- <img src="images/HomepageImage_3McloudLibrary.jpg" alt=""> -->
-                    <figcaption>
-                      <section>
-                        <h4>Hey, eBook Readers!</h4>
-                        <h4>3M Cloud Library <br>
-                          is becoming <br>
-                          cloudLibrary</h4>
-
-                        </section>
-                      </figcaption>
-                    </a>
-                  </figure>
-                </figure>
-              </div>
 
               <div class="w3-center w3-section" style="width:100%">
                 <!-- advance left and right arrows
