removed picture book slide

--- a/Slideshow_combined.html
+++ b/Slideshow_combined.html
@@ -22,24 +22,6 @@
       <div class="mySlides my-fade">
         <figure class="slider">
           <figure>
-            <a href="https://www.washcolib.org/321/New-Picture-Books">
-              <img src="/ImageRepository/Document?documentID=489" alt="">
-              <!-- <img src="images/HomepageImage_3McloudLibrary.jpg" alt=""> -->
-              <figcaption>
-                <section>
-                  <h4>Happy Picture Book Month</h4>
-                  <p>Celebrate by checking out a new picture book today!</p>
-
-                  </section>
-                </figcaption>
-              </a>
-            </figure>
-          </figure>
-        </div>
-
-      <div class="mySlides my-fade">
-        <figure class="slider">
-          <figure>
             <a href="http://washingtonmn.oneclickdigital.com/#search?search-source=quick-all&page-size=60&all=great%20courses&mediatype=eaudio" style="text-decoration: none;">
               <img src="/ImageRepository/Document?documentID=475" alt="">
               <!-- <img src="images/HomepageImage_FierceReads.jpg" alt=""> -->
@@ -82,7 +64,7 @@
                 <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(1)"></span>
                 <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(2)"></span>
                 <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(3)"></span>
-                <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(4)"></span>
+                <!-- <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(4)"></span> -->
                 <!-- <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(5)"></span> -->
                 <!-- <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(6)"></span> -->
                 <!-- <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(7)"></span> -->
